# FDUINO

./: .gitignore  .gitmodules  Makefile  README.md  TODO
HARDWARE/: bom.sc  fduino.sch  martinmake.lbr
HARDWARE/actuation_development/: L6205_2XDC.sch
HARDWARE/line_follower/: .syncthing.mainboard.sch.tmp  line_follower.brd  line_follower.sch  line_follower.with_sticks.brd  line_follower_pelican.brd  line_follower_tiled.brd
HARDWARE/mainboard/: FDUINO.brd  FDUINO.sch  fduino.brd  fduino.sch  mainboard.brd  mainboard.sch
SOFTWARE/: Makefile  Makefile.config  Makefile.proj  Makefile.proj.config  Makefile.project
SOFTWARE/01/: Makefile.config  compile_commands.json
SOFTWARE/01/inc/: config.h  drivers.h
SOFTWARE/01/inc/driver/: all.h  base.h  incremental_encoders.h  line_sensor.h  motors.h  motors_controller.h  obstacle_detector.h
SOFTWARE/01/src/: drivers.cpp
SOFTWARE/01/src/driver/: incremental_endcoders.cpp  line_sensor.cpp  motors.cpp  motors_controller.cpp  obstacle_detector.cpp
SOFTWARE/01_test/: Makefile  Makefile.config  compile_commands.json
SOFTWARE/01_test/inc/: config.h  drivers.h  line_sensor.h  motor.h  obstacle_detector.h
SOFTWARE/01_test/inc/driver/: all.h  base.h  line_sensor.h  motors.h  obstacle_detector.h
SOFTWARE/01_test/src/: drivers.cpp  main.cpp
SOFTWARE/01_test/src/driver/: line_sensor.cpp  motors.cpp  obstacle_detector.cpp
SOFTWARE/firmware/: CMakeLists.txt  Makefile  avr.cmake
SOFTWARE/firmware/libraries/: CMakeLists.txt
SOFTWARE/firmware/libraries/core/: README.md
SOFTWARE/firmware/libraries/core/source/: CMakeLists.txt  Core.h
SOFTWARE/firmware/libraries/core/source/Core/: GPIO.cpp  GPIO.h  adc.h  eeprom.cpp  eeprom.h  external_interrupt.cpp  external_interrupt.h  spi.cpp  spi.h
SOFTWARE/firmware/libraries/core/source/Core/timer/: base.cpp  base.h  timer0.cpp  timer0.h  timer1.cpp  timer1.h  timer2.cpp  timer2.h
SOFTWARE/firmware/libraries/core/source/Core/usart/: base.cpp  base.h  queue.cpp  queue.h  usart0.cpp  usart0.h
SOFTWARE/firmware/libraries/math/source/: CMakeLists.txt
SOFTWARE/firmware/libraries/util/: README.md
SOFTWARE/firmware/libraries/util/source/: CMakeLists.txt  cpp_allocation.cpp  util.h
SOFTWARE/firmware/libraries/util/source/util/: assert.h  atomic.h  bits.h  cpp_allocation.h  tty.h
SOFTWARE/firmware/rescue_line/source/: CMakeLists.txt  Drivers.h  config.h  main.cpp
SOFTWARE/firmware/rescue_line/source/Driver/: IncrementalEncoders.h  IncrementalEndcoders.cpp  LineSensor.cpp  LineSensor.h  Motors.h  ObstacleDetector.cpp  ObstacleDetector.h  all.h
SOFTWARE/firmware/sandbox/source/: CMakeLists.txt  main.cpp
